[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Backgrounds/Background(flappy).tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Characters/Eggbert.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/coolvetica.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Fonts/LEMONMILK.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Themes/Buttons.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/Characters/Eggbert(wave).gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 75
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 0.157205
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Foreground" parent="Background" index="1"]
layer = -1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 250, 174 )

[node name="Eggbert" parent="Node2D" instance=ExtResource( 3 )]
script = ExtResource( 7 )
HORIZONTAL_SPEED = 0
GRAVITY = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 62.0
margin_top = 33.0
margin_right = 962.0
margin_bottom = 567.0

[node name="Title" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 204.0
rect_min_size = Vector2( 900, 100 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][wave][shake]The Adventures of Eggbert the Eagle"
text = "The Adventures of Eggbert the Eagle"
fit_content_height = true

[node name="Control" type="Control" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 900.0
margin_bottom = 208.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 900.0
margin_bottom = 534.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 322.0
rect_min_size = Vector2( 500, 0 )

[node name="GameModes" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 60.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Game Modes"
text = "Game Modes"
fit_content_height = true

[node name="Control2" type="Control" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 500.0
margin_bottom = 64.0

[node name="Flappy" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 500.0
margin_bottom = 107.0
theme = ExtResource( 6 )
text = "Flappy"

[node name="Glide" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 500.0
margin_bottom = 150.0
theme = ExtResource( 6 )
text = "Glide"

[node name="Float" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 500.0
margin_bottom = 193.0
theme = ExtResource( 6 )
text = "Float"

[node name="Anti-gravity" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 500.0
margin_bottom = 236.0
theme = ExtResource( 6 )
text = "Anti-Gravity"

[node name="Runner" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 500.0
margin_bottom = 279.0
theme = ExtResource( 6 )
text = "Runner - Coming soon!"

[node name="Quit" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 283.0
margin_right = 500.0
margin_bottom = 322.0
theme = ExtResource( 6 )
text = "Quit"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Flappy" to="." method="_on_Flappy_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Glide" to="." method="_on_Glide_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Float" to="." method="_on_Float_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Anti-gravity" to="." method="_on_Antigravity_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]

[editable path="Background"]
